--- a/loggin.html
+++ b/loggin.html
@@ -17,7 +17,7 @@
       <div class="col-lg-4 col-md-6 col-sm-8">
         <div class="card shadow">
           <div class="card-body">
-            <h3 class="card-title text-center mb-4">Reciplas</h3>
+            <img class="card-img-top loginLogo" src="./externalSources/Reciplas.png"></img>
             <form>
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
@@ -25,7 +25,7 @@
               </div>
               <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Ingrese contrasenia">
+                <input type="password" class="form-control" id="password" placeholder="Ingrese contraseña">
               </div>
               <div class="d-grid">
                 <button type="submit" class="btn btn-primary">Ingresar</button>
