cambios jaz otra vez

--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
     <body>
         <div class="container">
             <div class="card"> 
-                <img src = "clientes2.png">
+                <img src = "./externalSources/clientes2.png">
                 <div class="contenido">
                     <h3>
                         <a href="#">CLIENTES</a>
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div class="card"> 
-                <img src="sales.png">
+                <img src="./externalSources/sales.png">
                 <div class="contenido">
                     <h3>
                         <a href="#">VENTAS</a>
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="card"> 
-                <img src="camion.png">
+                <img src="./externalSources/camion.png">
                 <div class="contenido">
                     <h3>
                         <a href="#">PEDIDOS</a>
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="card"> 
-                <img src="reportes.ico">
+                <img src="./externalSources/reportes.ico">
                 <div class="contenido">
                     <h3>
                         <a href="#">REPORTES</a>
