--- a/barraMenu.html
+++ b/barraMenu.html
@@ -10,21 +10,21 @@
                 <a href="#" class="logo"> 
                     <h2 class="Nombre">Reciplas</h2>
                 </a>
-                <img src="iconprofile.png" class="perfil" onclick="toggleMenu()">
+                <img src="./externalSources/iconprofile.png" class="perfil" onclick="toggleMenu()">
                 <div class="sub-menu" id="subMenu">
                     <div class="items">
                         <div class="user-info">
-                            <img src="profile.png">
+                            <img src="./externalSources/profile.png">
                             <p>Perfil</p>
                         </div>
                         <hr>
                             <a href="#" class="sub-menu-link">
-                                <img src="setting.png">
+                                <img src="./externalSources/setting.png">
                                 <p>Ajustes</p>
                                 <span>></span>
                             </a>
                             <a href="#" class="sub-menu-link">
-                                <img src="logout.png">
+                                <img src="./externalSources/logout.png">
                                 <p>Cerrar Sesión</p>
                                 <span>></span>
                             </a>
