Formularios Editar y Añadir

--- a/actualizarEmpleadoAdm.html
+++ b/actualizarEmpleadoAdm.html
@@ -48,6 +48,11 @@
         <div class="formulario">
             <div class="container">
                 <div class="title">Actualizar Empleado</div>
+                <div class="subtitle">
+                    <h5>
+                        Editar información de empleado
+                    </h5>
+                </div>
                 <form action="#">
                     <div class="detalle-cliente">
                         <div class="input-box">
