--- a/editarPedido.html
+++ b/editarPedido.html
@@ -48,6 +48,11 @@
         <div class="formulario">
             <div class="container">
                 <div class="title">Editar Pedido</div>
+                <div class="subtitle">
+                    <h5>
+                        Editar información de pedido
+                    </h5>
+                </div>
                 <form action="#">
                     <div class="detalle-pedido">
                         <div class="input-box">
